--- a/.github/workflows/python-package.yaml
+++ b/.github/workflows/python-package.yaml
@@ -31,6 +31,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install . # Install your package locally
+          pip install pytest
 
       # Step 4: Run tests
       - name: Run tests with pytest
